# stulto

./: .gitignore  Makefile  README.md  meson.build  stulto.c
data/: meson.build  stulto.desktop.in  stulto.ini
src/: exit-status.c  exit-status.h  meson.build  stulto-app-config.h  stulto-application.c  stulto-application.h  stulto-exec-data.c  stulto-exec-data.h  stulto-global-config.h  stulto-header-bar.c  stulto-header-bar.h  stulto-headerbar.c  stulto-headerbar.h  stulto-main-window.c  stulto-main-window.h  stulto-session-manager.c  stulto-session-manager.h  stulto-session.c  stulto-session.h  stulto-terminal-profile.c  stulto-terminal-profile.h  stulto-terminal.c  stulto-terminal.h  stulto.c  terminal-config.c  terminal-config.h
