# Desktop launcher

install_data(
    'stulto.desktop.in',
    rename: '@0@.desktop'.format(meson.project_name()),
    install_dir: st_desktopdir
)

# Example config
# This is currently not loaded by the app, but will be as a fallback config in a future release

install_data(
    'stulto.ini',
    install_dir: st_configdir
)
